hpa/hpa-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hpa-service
spec:
  selector:
    app: hpa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
